# espidf-arduino-wifiscan

./: README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev  web_main.html
moje/web/: wifiprovisioning_signin.html
src/: CMakeLists.txt  config.h  main.cpp  main.h
src/EasyButton/: EasyButton.cpp  EasyButton.h
src/display/: display.cpp  display.h  font.h
src/display/ws2812b/: ws2812b.cpp  ws2812b.h  ws2812b_driver.S
src/nvs/: nvsutils.cpp  nvsutils.h
src/screens/: Screens.h  ScreensManager.cpp  ScreensManager.h
src/screens/default/: ScreenAPConfig.cpp  ScreenAPConfig.h  ScreenLoading.cpp  ScreenLoading.h  ScreenSTAConnected.cpp  ScreenSTAConnected.h  ScreenSTAConnecting.cpp  ScreenSTAConnecting.h  ScreenSTAFailed.cpp  ScreenSTAFailed.h  ScreenText.cpp  ScreenText.h  ScreenTime.cpp  ScreenTime.h
src/screens/extra/: ScreenCrypto.cpp  ScreenCrypto.h  ScreenText.cpp  ScreenText.h  ScreenTime.cpp  ScreenWeather.cpp  ScreenWeather.h
src/web/: webmain.html  webprovisioning.html
src/wifiprovisioning/: WifiProvisioning.AP.cpp  WifiProvisioning.STA.cpp  WifiProvisioning.WifiManager.cpp  WifiProvisioning.cpp  WifiProvisioning.h
src/wifiutils/: wifiutils.cpp  wifiutils.h
web/: webmain.html
